--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,8 @@
         <slf4j.version>1.7.9</slf4j.version>
         <logback-core.version>1.1.3</logback-core.version>
 
-        <seleniumhq.version>3.4.0</seleniumhq.version>
+        <seleniumhq.version>3.6.0</seleniumhq.version>
+        <selenium-unit.version>2.52.0</selenium-unit.version>
         <jna.version>4.5.0</jna.version>
 
     </properties>
@@ -104,8 +105,13 @@
             </dependency>
             <dependency>
                 <groupId>org.seleniumhq.selenium</groupId>
-                <artifactId>selenium-htmlunit-driver</artifactId>
+                <artifactId>selenium-firefox-driver</artifactId>
                 <version>${seleniumhq.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-htmlunit-driver</artifactId>
+                <version>${selenium-unit.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.seleniumhq.selenium</groupId>
@@ -217,6 +223,10 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-chrome-driver</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-firefox-driver</artifactId>
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
